--- a/src/templates/mod_tools_form.html
+++ b/src/templates/mod_tools_form.html
@@ -36,7 +36,7 @@
             </div>
         </div>
     </form>
-    <div id="fmdError">Error</div>
+    <div id="fmdError"></div>
 </div>
 
 <script type="text/javascript">
@@ -89,8 +89,7 @@
         if (!res.ok) {
             return false
         }
-        let data = await res.json()
-        return data.success
+        return true
     };
 
     FF.show = function () {
